@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 1998, 2002, 2004  Free Software Foundation, Inc.
+# Copyright (C) 1998, 2002, 2004, 2010 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -17,6 +17,8 @@
 # Test to make sure include of include detects missing macros
 . ./defs || Exit 1
 
+set -e
+
 echo GNOME_X_CHECKS >> configure.in
 
 mkdir macros
@@ -27,6 +29,6 @@ AC_DEFUN([GNOME_X_CHECKS], [
 ])
 END
 
-$ACLOCAL -I macros 2>stderr
+$ACLOCAL -I macros 2>stderr && { cat stderr >&2; Exit 1; }
 cat stderr
 grep 'macros/gnome.m4:2:.*AM_PATH_GTK.*not found' stderr
