@@ -1,5 +1,9 @@
 2010-04-11  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	Make test `aclocal3.test' stricter.
+	* tests/aclocal3.test: Add call to `set -e'.  Fail if $ACLOCAL
+	succeds unexpectedly.
+
 	Add tests checking that symlinks are resolved by `make dist'.
 	* tests/distlinks.test: New test.
 	* tests/Makefile.am (TESTS): Updated accordingly.
